--- a/views/back/sowing_add.html
+++ b/views/back/sowing_add.html
@@ -42,7 +42,7 @@
             <div class="navs">
                 <ul class="list-unstyled">
                     <li>
-                        <a href="index.html">
+                        <a href="./index.html">
                             <i class="fa fa-area-chart"></i>
                             数据分析
                         </a>
