--- a/views/web/index.html
+++ b/views/web/index.html
@@ -151,8 +151,8 @@
         </div>
 
         <ul class="navs clearfix">
-            <li><a href="index.html" class="on">首页</a></li>
-            <li><a href="resources.html">幼教资源</a></li>
+            <li><a href="/web" class="on">首页</a></li>
+            <li><a href="/web/res">幼教资源</a></li>
             <li><a href="#">职场人生</a></li>
             <li><a href="#">活动专区</a></li>
             <li><a href="#">直播课堂</a><img src="Images/new_ico.png" class="new_nav"/></li>
