--- a/views/web/resources.html
+++ b/views/web/resources.html
@@ -66,8 +66,8 @@
         </div>
         <div class="menu_nav">
             <ul class="navs clearfix">
-                <li><a href="index.html">首页</a></li>
-                <li><a href="resources.html" class="on">幼教资源</a></li>
+                <li><a href="/web">首页</a></li>
+                <li><a href="/web/res"  class="on">幼教资源</a></li>
                 <li><a href="#">职场人生</a></li>
                 <li><a href="#">活动专区</a></li>
                 <li><a href="#">直播课堂</a><img src="Images/new_ico.png" class="new_nav"/></li>
@@ -127,7 +127,7 @@
             <div class="sort_right">共有<span class="lm_desc_num">3732</span>条资源，供您选择学习</div>
             <div class="resource_cons no_top">
                 <div class="resource_con">
-                <a href="resources_content.html">
+                <a href="/web/res_c">
                     <div class="resource_con_pic">
                         <img src="Images/resource_con_pic_1.jpg"/>
                     </div>
