--- a/views/web/resources_content.html
+++ b/views/web/resources_content.html
@@ -73,8 +73,8 @@
         </div>
         <div class="menu_nav">
             <ul class="navs clearfix">
-                <li><a href="index.html">首页</a></li>
-                <li><a href="resources.html" class="on">幼教资源</a></li>
+                <li><a href="/web">首页</a></li>
+                <li><a href="/web/res"  class="on">幼教资源</a></li>
                 <li><a href="#">职场人生</a></li>
                 <li><a href="#">活动专区</a></li>
                 <li><a href="#">直播课堂</a><img src="Images/new_ico.png" class="new_nav"/></li>
