--- a/views/back/reset_pwd.html
+++ b/views/back/reset_pwd.html
@@ -42,7 +42,7 @@
             <div class="navs">
                 <ul class="list-unstyled">
                     <li>
-                        <a href="index.html" class="active">
+                        <a href="./index.html" class="active">
                             <i class="fa fa-area-chart"></i>
                             数据分析
                         </a>
