使用nunjuncks创建基础页面

--- a/views/back/base.html
+++ b/views/back/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="node_modules/nprogress/nprogress.css">
     <link rel="stylesheet" href="css/index.css">
-    <!--留个插槽-用于放置所有引入的文件-->
+    <!--留个插槽-用于放置所有引入的文件，在里面可以自定css等-->
     {% block style %}
     {% endblock %}
 </head>
