添加轮播图

--- a/views/back/sowing_list.html
+++ b/views/back/sowing_list.html
@@ -14,7 +14,7 @@
             <li class="active">轮播图列表</li>
         </ol>
         <div class="page-title">
-            <a href="sowing_add.html" class="btn btn-danger btn-sm pull-right">添加轮播图</a>
+            <a href="/back/s_add" class="btn btn-danger btn-sm pull-right">添加轮播图</a>
         </div>
         <div class="panel panel-default">
             <table class="table table-bordered">
