--- a/views/back/sowing_add.html
+++ b/views/back/sowing_add.html
@@ -15,40 +15,40 @@
             <li class="active">添加轮播图</li>
         </ol>
         <div class="advert-add">
-            <form action="" class="form-horizontal">
+            <form action="/sowing/api/add" method="post" class="form-horizontal">
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">图片名称</label>
                     <div class="col-md-5">
-                        <input type="text" class="form-control input-sm" placeholder="填写图片名称" required>
+                        <input name="image_title" type="text" class="form-control input-sm" placeholder="填写图片名称" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">图片路径</label>
                     <div class="col-md-5">
-                        <input type="text" class="form-control input-sm" placeholder="填写图片路径" required>
+                        <input name="image_url" type="text" class="form-control input-sm" placeholder="填写图片路径" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">跳转链接</label>
                     <div class="col-md-5">
-                        <input type="text" class="form-control input-sm" placeholder="填写跳转链接" required>
+                        <input name="image_link" type="text" class="form-control input-sm" placeholder="填写跳转链接" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">上架时间</label>
                     <div class="col-md-5">
-                        <input type="date" class="form-control input-sm" placeholder="填写上架时间" required>
+                        <input name="s_time" type="date" class="form-control input-sm" placeholder="填写上架时间" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">下架时间</label>
                     <div class="col-md-5">
-                        <input type="date" class="form-control input-sm" placeholder="填写下架时间" required>
+                        <input name="e_time" type="date" class="form-control input-sm" placeholder="填写下架时间" required>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-8">
-                        <a href="sowing_list.html" class="btn btn-danger btn-sm pull-right">添加轮播图</a>
+                        <input type="submit" class="btn btn-danger btn-sm pull-right" value="添加轮播图">
                     </div>
                 </div>
             </form>
@@ -59,6 +59,31 @@
 
 <!--脚本-->
 {% block script %}
+<script>
+    $(function () {
+        //1.添加一条记录
+        $("form").on("submit",function () {
+            $.ajax({
+                url:$(this).attr("action"),
+                type:$(this).attr("method"),
+                //以标准URL编码形式的字符串进行传递
+                data:$(this).serialize(),
+                success:function (data) {
+                    console.log(data);
+                    if (data.status=="200"){
+                        alert("轮播图添加成功！")
+                        window.location.href = "/back/s_list"
+                    }else {
+                        alert("轮播图添加失败！")
+                    }
+                }
 
+            });
+
+            //阻止默认提交的事件
+            return false;
+        });
+    });
+</script>
 {% endblock %}
 
