--- a/views/back/sowing_add.html
+++ b/views/back/sowing_add.html
@@ -70,8 +70,8 @@
                 data:$(this).serialize(),
                 success:function (data) {
                     console.log(data);
-                    if (data.status=="200"){
-                        alert("轮播图添加成功！")
+                    if (data.status === "200"){
+                        alert("轮播图添加成功！");
                         window.location.href = "/back/s_list"
                     }else {
                         alert("轮播图添加失败！")
