轮播图添加

--- a/views/back/sowing_list.html
+++ b/views/back/sowing_list.html
@@ -35,7 +35,9 @@
                     <tr>
                         <td>{{loop.index}}</td>
                         <td>{{sowing.image_title}}</td>
-                        <td>{{sowing.image_url}}</td>
+                        <td>
+                            <img src="/uploads/{{sowing.image_url}}" alt="" style="width: 200px">
+                        </td>
                         <td>{{sowing.image_link}}</td>
                         <td>{{sowing.s_time}}</td>
                         <td>{{sowing.e_time}}</td>
