--- a/views/back/sowing_add.html
+++ b/views/back/sowing_add.html
@@ -15,7 +15,7 @@
             <li class="active">添加轮播图</li>
         </ol>
         <div class="advert-add">
-            <form action="/sowing/api/add" method="post" class="form-horizontal">
+            <form action="/sowing/api/add" method="post" class="form-horizontal" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">图片名称</label>
                     <div class="col-md-5">
@@ -25,7 +25,7 @@
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">图片路径</label>
                     <div class="col-md-5">
-                        <input name="image_url" type="text" class="form-control input-sm" placeholder="填写图片路径" required>
+                        <input name="image_url" type="file" class="form-control input-sm" placeholder="请上传一张图片" required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -66,11 +66,12 @@
             $.ajax({
                 url:$(this).attr("action"),
                 type:$(this).attr("method"),
-                //以标准URL编码形式的字符串进行传递
-                data:$(this).serialize(),
+                data:new FormData($(this)[0]),
+                processData:false,//传递原生数据
+                contentType:false,//不要设置请求头
                 success:function (data) {
                     console.log(data);
-                    if (data.status === "200"){
+                    if (data.status === 200){
                         alert("轮播图添加成功！");
                         window.location.href = "/back/s_list"
                     }else {
