--- a/views/back/sowing_list.html
+++ b/views/back/sowing_list.html
@@ -42,7 +42,7 @@
                         <td>{{sowing.s_time}}</td>
                         <td>{{sowing.e_time}}</td>
                         <td>
-                            <a href="javascript:;" class="btn btn-primary btn-xs">编辑</a>
+                            <a href="/back/s_edit" class="btn btn-primary btn-xs">编辑</a>
                             <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
                         </td>
                     </tr>
