--- a/views/back/sowing_list.html
+++ b/views/back/sowing_list.html
@@ -42,7 +42,7 @@
                         <td>{{sowing.s_time}}</td>
                         <td>{{sowing.e_time}}</td>
                         <td>
-                            <a href="/back/s_edit" class="btn btn-primary btn-xs">编辑</a>
+                            <a data-id="{{sowing._id}}" class="btn btn-primary btn-xs btn-edit">编辑</a>
                             <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
                         </td>
                     </tr>
@@ -56,5 +56,13 @@
 
 <!--脚本-->
 {% block script %}
+<script>
+    $(function () {
+        $(".btn-edit").on("click",()=>{
+            alert(0);
+            //将当前数据的id作为一个属性，绑定在“编辑”按钮上
 
+        });
+    });
+</script>
 {% endblock %}
