--- a/views/back/sowing_list.html
+++ b/views/back/sowing_list.html
@@ -43,7 +43,7 @@
                         <td>{{sowing.e_time}}</td>
                         <td>
                             <a data-id="{{sowing._id}}" class="btn btn-primary btn-xs btn-edit">编辑</a>
-                            <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
+                            <a data-id="{{sowing._id}}" class="btn btn-danger btn-xs btn-del">删除</a>
                         </td>
                     </tr>
                 {% endfor %}
@@ -58,6 +58,7 @@
 {% block script %}
 <script>
     $(function () {
+        //点击了修改按钮
         $(".btn-edit").on("click",function(){
             //将当前数据的id作为一个属性，绑定在“编辑”按钮上
             let sowingId = $(this).attr("data-id");
@@ -65,6 +66,30 @@
             window.location.href = `/back/s_edit?sid=${sowingId}`;
 
         });
+        //点击了删除按钮
+        $(".btn-del").on("click",function(){
+            //将当前数据的id作为一个属性，绑定在“编辑”按钮上
+            let sowingId = $(this).attr("data-id");
+            //发起ajax请求
+            $.ajax({
+                url:"http://localhost:3040/sowing/api/remove/" + sowingId,
+                type:"get",
+                dataType:"json",
+                success:function (data) {
+                    console.log(data);
+                    if(data.status === 200){
+                        alert("删除成功");
+                        window.location.reload();
+                    }else{
+                        alert("删除失败");
+                    }
+                }
+
+            })
+
+        });
+
+
     });
 </script>
 {% endblock %}
