--- a/views/back/aside.html
+++ b/views/back/aside.html
@@ -12,9 +12,9 @@
     <div class="navs">
         <ul class="list-unstyled">
             <li>
-                <a href="./index.html" class="active">
+                <a href="/back" class="active">
                     <i class="fa fa-area-chart"></i>
-                    数据分析
+                    首页数据
                 </a>
             </li>
             <li>
@@ -26,28 +26,18 @@
             <li>
                 <a href="javascript:;">
                     <i class="fa fa-object-group"></i>
-                    课程管理
+                    用户管理
                     <i class="arrow fa fa-angle-right"></i>
                 </a>
                 <ul class="list-unstyled">
                     <li>
-                        <a href="./course_add.html">
-                            课程添加
+                        <a href="/back/u_center">
+                            用户中心
                         </a>
                     </li>
                     <li>
-                        <a href="./course_list.html">
-                            课程列表
-                        </a>
-                    </li>
-                    <li>
-                        <a href="./course_category.html">
-                            课程分类
-                        </a>
-                    </li>
-                    <li>
-                        <a href="./course_topic.html">
-                            课程专题
+                        <a href="/back/u_set">
+                            用户信息
                         </a>
                     </li>
                 </ul>
