--- a/views/back/header.html
+++ b/views/back/header.html
@@ -10,7 +10,24 @@
             <li><a href="javascript:;"><i class="fa fa-xing"></i>CRM对接中心</a></li>
             <li><a href="/back/u_center"><i class="fa fa-user"></i>用户中心</a></li>
             <li><a href="javascript:;"><i class="fa fa-bell"></i><span class="badge">20</span></a></li>
-            <li><a href="javascript:;"><i class="fa fa-sign-out"></i>退出</a></li>
+            <li><a class="logout" style="cursor: pointer"><i class="fa fa-sign-out"></i>退出</a></li>
         </ul>
     </nav>
 </div>
+<script src="node_modules/jquery/dist/jquery.js"></script>
+<script>
+    $(function () {
+        $(".logout").on("click",function () {
+            $.get("http://localhost:3040/back/user/api/logout",(data)=>{
+                console.log(data);
+                if(data.status === 200){//退出登陆成功
+                    alert(data.result);
+                    //删除本地数据
+                    sessionStorage.removeItem("result");
+                    //跳转到登陆页面
+                    window.location.href = "/back/login";
+                }
+            })
+        });
+    });
+</script>
