--- a/views/back/sowing_add.html
+++ b/views/back/sowing_add.html
@@ -15,7 +15,7 @@
             <li class="active">添加轮播图</li>
         </ol>
         <div class="advert-add">
-            <form action="/sowing/api/add" method="post" class="form-horizontal" enctype="multipart/form-data">
+            <form action="/back/sowing/api/add" method="post" class="form-horizontal" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">图片名称</label>
                     <div class="col-md-5">
