--- a/views/back/sowing_edit.html
+++ b/views/back/sowing_edit.html
@@ -76,13 +76,13 @@
         // console.log(url,sowingId)
         //2.发起ajax请求
         $.ajax({
-            url:"http://localhost:3040/sowing/api/single/"+sowingId,
+            url:"http://localhost:3040/back/sowing/api/single/"+sowingId,
             type:"get",
             dataType:"json",
             success:function(data){
                 //2.1 注入数据
                 let tpl = `
-                <form action="/sowing/api/edit" method="post" class="form-horizontal" enctype="multipart/form-data">
+                <form action="/back/sowing/api/edit" method="post" class="form-horizontal" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">图片名称</label>
                     <div class="col-md-5">
