--- a/views/back/user_center.html
+++ b/views/back/user_center.html
@@ -15,26 +15,8 @@
             <li><a href="javascript:;">用户管理</a></li>
             <li class="active">用户信息</li>
         </ol>
-        <div class="profile">
-            <div class="pull-left">
-                <img src="./uploads/avatar.png" class="img-circle pull-left" alt="">
-                <span class="name">撩课学院</span>
-                <span>喜欢IT, 就上撩课！</span>
-            </div>
-            <ul class="pull-right list-inline">
-                <li>
-                    <span>积分</span>
-                    <a href="javascript:;">120</a>
-                </li>
-                <li>
-                    <span>等级</span>
-                    <a href="javascript:;">10</a>
-                </li>
-                <li>
-                    <span>金币</span>
-                    <a href="javascript:;">10000</a>
-                </li>
-            </ul>
+        <div class="profile" id="user_msg">
+
         </div>
         <div class="courses">
             <ul class="navs list-unstyled">
@@ -145,6 +127,59 @@
 
 <!--脚本-->
 {% block script %}
+<script>
+    $(function () {
+        //1.1获取本地的token
+        let token = JSON.parse(sessionStorage.getItem("result")).token;
+        console.log(token); //5e1dd1f95ac11d5924cdccdf
+        //1.2根据token请求数据
+        if(token){
+            //2.发起ajax请求
+            $.ajax({
+                url:"http://localhost:3040/back/user/api/u_msg/"+token,
+                type:"get",
+                dataType:"json",
+                success:function(data){
+                    console.log(data);
+                    if(data.status === 200){
+                        //2.1注入数据
+                        let tpl = `
+                        <div class="pull-left">
+                            <img src="${data.result.user_img?'/uploads/'+data.result.user_img:'./uploads/avatar.png'}" class="img-circle pull-left" alt="">
+                            <span class="name">${data.result.real_name}</span>
+                            <span>${data.result.intro_self}</span>
+                        </div>
+                        <ul class="pull-right list-inline">
+                            <li>
+                                <span>积分</span>
+                                <a href="javascript:;">${data.result.points}</a>
+                            </li>
+                            <li>
+                                <span>等级</span>
+                                <a href="javascript:;">${data.result.rank}</a>
+                            </li>
+                            <li>
+                                <span>金币</span>
+                                <a href="javascript:;">${data.result.gold}</a>
+                            </li>
+                        </ul>
+                    `;
+                        $("#user_msg").append(tpl);
+                    }else{
+                        alert("获取用户失败");
+                    }
+                }
 
+
+
+            })
+        }else{//如果token不存在
+            //删除本地数据
+            sessionStorage.removeItem("result");
+            //跳转到登陆页面
+            window.location.href = "/back/login";
+        }
+    });
+</script>
 {% endblock %}
 
