--- a/views/back/user_message.html
+++ b/views/back/user_message.html
@@ -10,55 +10,8 @@
 <div class="container-fluid">
     <!-- 讲师资料 -->
     <div class="body teacher-profile">
-        <div class="settings">
-            <form action="" class="form-horizontal">
-                <div class="form-group">
-                    <label for="" class="col-md-3 control-label">姓名</label>
-                    <div class="col-md-5">
-                        <input type="text" class="form-control input-sm">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="" class="col-md-3 control-label">头像</label>
-                    <div class="col-md-2 preview">
-                        <img src="./images/default.png" style="border: 1px solid #e0e0e0;">
-                        <input type="file" id="upfile">
-                        <div class="cover">
-                            <i class="fa fa-upload"></i>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="" class="col-md-3 control-label">手机号码</label>
-                    <div class="col-md-5">
-                        <input type="text" class="form-control input-sm">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="" class="col-md-3 control-label">Email</label>
-                    <div class="col-md-5">
-                        <input type="text" class="form-control input-sm">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="" class="col-md-3 control-label">加入日期</label>
-                    <div class="col-md-5">
-                        <input type="date" class="form-control input-sm">
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="" class="col-md-3 control-label">自我介绍</label>
-                    <div class="col-md-5 ckeditor">
-                        <textarea name="" rows="15" class="form-control input-sm"></textarea>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-8">
-                        <input type="button" class="btn btn-danger pull-right" value="重新设置" />
-                        <a href="/back/u_reset_pwd" class="btn btn-link btn-success pull-right">修改密码？</a>
-                    </div>
-                </div>
-            </form>
+        <div class="settings" id="user_msg">
+
         </div>
     </div>
 </div>
@@ -66,6 +19,147 @@
 
 <!--脚本-->
 {% block script %}
+<script>
+    $(function () {
+        //1.1获取本地的token
+        let token = JSON.parse(sessionStorage.getItem("result")).token;
+        console.log(token); //5e1dd1f95ac11d5924cdccdf
+        //1.2根据token请求数据
+        if(token){
+            //2.发起ajax请求
+            $.ajax({
+                url:"http://localhost:3040/back/user/api/u_msg_all/"+token,
+                type:"get",
+                dataType:"json",
+                success:function(data){
+                    console.log(data);
+                    if(data.status === 200){
+                        //2.1注入数据
+                        let tpl = `
+                        <form id="user_form" action="http://localhost:3040/back/user/api/edit" method="post" enctype="multipart/form-data" class="form-horizontal">
+                            <div class="form-group">
+                                <label for="" class="col-md-3 control-label">姓名</label>
+                                <div class="col-md-5">
+                                    <input type="text" name="real_name" class="form-control input-sm" value="${data.result.real_name?data.result.real_name:''}" placeholder="请输入用户姓名" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="" class="col-md-3 control-label">头像</label>
+                                <div class="col-md-2 preview">
+                                    <img id="image_url" src="${data.result.user_img !== 'undefined'?'/uploads/'+data.result.user_img:'/uploads/avatar.png'}" style="border: 1px solid #e0e0e0;">
+                                    <input type="file" id="upfile">
+                                    <div class="cover">
+                                        <i class="fa fa-upload"></i>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="" class="col-md-3 control-label">手机号码</label>
+                                <div class="col-md-5">
+                                    <input name="phone" id="phone" type="text" class="form-control input-sm" value="${data.result.phone?data.result.phone:''}" required placeholder="请输入手机号码">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="" class="col-md-3 control-label">Email</label>
+                                <div class="col-md-5">
+                                    <input name="email" id="email" type="text" class="form-control input-sm" value="${data.result.email?data.result.email:''}" required placeholder="请输入邮件地址">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="" class="col-md-3 control-label">加入日期</label>
+                                <div class="col-md-5">
+                                    <input name="join_time" type="date" class="form-control input-sm" value="${data.result.join_time?data.result.join_time:''}" required>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="" class="col-md-3 control-label">自我介绍</label>
+                                <div class="col-md-5 ckeditor">
+                                    <textarea name="intro_self" rows="15" class="form-control input-sm" placeholder="请用一句话介绍自己" required>${data.result.intro_self?data.result.intro_self:''}</textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-8">
+                                    <input type="button" id="btn_save" class="btn btn-danger pull-right" value="修改信息" />
+                                    <a href="/back/u_reset_pwd" class="btn btn-link btn-success pull-right">修改密码？</a>
+                                </div>
+                            </div>
+                        </form>
+                        `;
+                        $("#user_msg").append(tpl);
 
+                        //2.2上传图片的加载处理
+                        $("#upfile").on("change",function () {
+                            //2.2.1获取用户上传的图片文件 $(this).get(0).files[0]
+                            let file = $(this).get(0).files[0];
+                            //2.2.2读取这个文件
+                            let src = "";
+                            let reader = new FileReader();
+                            if(file){
+                                reader.readAsDataURL(file);
+                            }else{
+                                src = ""
+                            }
+                            //2.2.3监听文件是否读取完毕
+                            reader.onloadend = function () {
+                                $("#image_url").attr("src",this.result);
+                            }
+
+                        });
+
+                        //2.3点击提交数据
+                        $("#btn_save").on("click",function () {
+                            let $phone = $("#phone"),$email = $("#email");
+                            let pattern = /^\w+((.\w+)|(-\w+))@[A-Za-z0-9]+((.|-)[A-Za-z0-9]+).[A-Za-z0-9]+$/;
+                            if(/^[1][3,4,5,6][0-9]{9}$/.test($phone.val())===false){
+                                alert("请输入正确的手机号码");
+                                $phone.val("");
+                                return false;
+                            }
+
+                            if(pattern.test($email.val())===false){
+                                alert("请输入正确的电子邮箱");
+                                $email.val("");
+                                return false;
+                            }
+                            //发起ajax请求
+                            //拿到头像
+                            let image_url = $("#upfile").get(0).files[0] || data.result.image_url;
+                            console.log(";;;;;;;;;;;;;"+image_url);
+                            let $user_form = $("#user_form");
+                            let formData = new FormData($user_form.get(0));
+                            formData.append("token",token);
+                            formData.append("user_img",image_url);
+                            //2.3.3 发起ajax请求
+                            let $form = $("form");
+                            $.ajax({
+                                url:$form.attr("action"),
+                                type:$form.attr("method"),
+                                data:formData,
+                                processData:false,//传递原生数据
+                                contentType:false,//不要设置请求头
+                                success:function (data) {
+                                    console.log(data);
+                                    if (data.status === 200){
+                                        alert("用户信息修改成功！");
+                                        window.location.href = "/back/u_center"
+                                    }else {
+                                        alert("用户信息修改失败！")
+                                    }
+                                }
+                            });
+                        });
+                    }else{
+                        alert("获取用户信息失败");
+                    }
+                }
+            })
+        }else{//如果token不存在
+            //删除本地数据
+            sessionStorage.removeItem("result");
+            //跳转到登陆页面
+            window.location.href = "/back/login";
+        }
+    });
+</script>
 {% endblock %}
 
