--- a/views/back/user_center.html
+++ b/views/back/user_center.html
@@ -130,7 +130,7 @@
 <script>
     $(function () {
         //1.1获取本地的token
-        let token = JSON.parse(sessionStorage.getItem("result")).token;
+        let token = JSON.parse(localStorage.getItem("result")).token;
         console.log(token); //5e1dd1f95ac11d5924cdccdf
         //1.2根据token请求数据
         if(token){
@@ -175,7 +175,7 @@
             })
         }else{//如果token不存在
             //删除本地数据
-            sessionStorage.removeItem("result");
+            localStorage.removeItem("result");
             //跳转到登陆页面
             window.location.href = "/back/login";
         }
