--- a/views/back/reset_pwd.html
+++ b/views/back/reset_pwd.html
@@ -11,30 +11,29 @@
     <!-- 修改密码 -->
     <div class="body">
         <div class="repass">
-            <form action="" class="form-horizontal col-md-offset-2">
+            <form action="http://localhost:3040/back/user/api/reset" method="post" class="form-horizontal col-md-offset-2">
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">原密码</label>
                     <div class="col-md-4">
-                        <input type="text" class="form-control input-sm">
+                        <input id="old_pwd" name="old_pwd" type="text" class="form-control input-sm" required placeholder="请输入原密码">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">新密码</label>
                     <div class="col-md-4">
-                        <input type="password" class="form-control input-sm">
+                        <input id="new_pwd" name="new_pwd" type="password" class="form-control input-sm" required placeholder="请输入新密码">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="" class="col-md-3 control-label">确认密码</label>
                     <div class="col-md-4">
-                        <input type="text" class="form-control input-sm">
+                        <input id="re_pwd" name="re_pwd" type="password" class="form-control input-sm" required placeholder="请再次输入新密码">
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-7">
-                        <input type="submit" class="btn btn-success btn-danger  pull-right" value="修 改">
-                        <input type="submit" class="btn btn-success btn-warning pull-right" value="返 回" style="margin-right: 10px;">
-
+                        <input id="" type="submit" class="btn btn-success btn-danger  pull-right" value="修 改">
+                        <a href="/back/u_set" class="btn btn-success btn-warning pull-right" style="margin-right: 10px;">返 回</a>
                     </div>
                 </div>
             </form>
@@ -45,6 +44,60 @@
 
 <!--脚本-->
 {% block script %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.12.0/js/md5.js"></script>
+<script>
+    $(function () {
+        let token = JSON.parse(localStorage.getItem("result")).token;
+        //1.添加一条记录
+        $("form").on("submit",function () {
+            let old_pwd = $("#old_pwd").val();
+            let new_pwd = $("#new_pwd").val();
+            let re_pwd = $("#red_pwd").val();
+            //2.对比
+            if(new_pwd === re_pwd){
+                alert("两次输入新密码不一致！");
+                return;
+            }
+            //3.固定加盐的字符串
+            const S_KEY = '@Walk1314?.ItE.Com#';
+            let md5_old_pwd = md5(old_pwd + S_KEY);
+            let md5_new_pwd = md5(new_pwd + S_KEY);
+            //4.发起post请求
+            $.ajax({
+                url:$(this).attr("action"),
+                type:$(this).attr("method"),
+                data:`${token}&&${md5_old_pwd}&&${md5_new_pwd}`,
+                success:function (data) {
+                    console.log(data);
+                    if (data.status === 200){
+                        alert("密码修改成功！");
+                        //5.退出登陆 重新登陆
+                        $.get("http://localhost:3040/back/user/api/logout",function (data) {
+                            console.log(data);
+                            if(data.status === 200){
+                                //删除本地数据
+                                localStorage.removeItem("result");
+                                //回到登陆界面
+                                window.location.href = "/back/login"
+                            }
+                        });
 
+                    }else {
+                        alert("密码修改失败");
+                    }
+                }
+
+            });
+
+
+
+
+
+
+            //阻止默认提交的事件
+            return false;
+        });
+    });
+</script>
 {% endblock %}
 
