文章列表页相关配置

--- a/views/back/aside.html
+++ b/views/back/aside.html
@@ -18,9 +18,9 @@
                 </a>
             </li>
             <li>
-                <a href="./user_list.html">
+                <a href="/back/source_list">
                     <i class="fa fa-users"></i>
-                    用户中心
+                    幼教资源管理
                 </a>
             </li>
             <li>
