编辑图片上传服务器

--- a/views/back/source_list.html
+++ b/views/back/source_list.html
@@ -14,7 +14,7 @@
             <li class="active">文章列表</li>
         </ol>
         <div class="page-title">
-            <a href="/back/souce_add" class="btn btn-danger btn-sm pull-right">添加资源文章</a>
+            <a href="/back/source_add" class="btn btn-danger btn-sm pull-right">添加资源文章</a>
         </div>
         <div class="panel panel-default">
             {% if sources.length>0 %}
